<resources>
    <string name="app_name">TaskForGuru</string>
    <string name="ecommerce_concept">Ecommerce\nConcept</string>
    <string name="circle_splash">circle_splash</string>
    <string name="name_town">Town</string>
    <string name="geolabel">geolabel</string>
    <string name="filter_icon">folter_icon</string>
    <string name="view_all">view all</string>
    <string name="select_category">Select Category</string>
    <string name="search">Search</string>
    <string name="search_zone">search_zone</string>
    <string name="search_icon">search_icon</string>
    <string name="circle_qr">circle_qr</string>
    <string name="nameofcategory">NameOfCategory</string>
    <string name="iv_circle_category">iv_circle_category</string>
    <string name="iv_category_icon">iv_category_icon</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="iphone">Iphone12</string>
    <string name="hot_sales_description">Súper. Mega. Rápido.</string>
    <string name="buynow">buynow</string>
    <string name="new_hot_sales">new_hot_sales</string>
    <string name="picture_hot_sales">picture_hot_sales</string>
    <string name="best_sales">Best sales</string>
    <string name="bestseller_pic">bestseller_pic</string>
    <string name="tv_bestsellername">tv_bestsellername</string>
    <string name="tv_price">10000</string>
    <string name="tv_price_before"><strike>10000</strike></string>
    <string name="favorites">favorites</string>

    <string-array name="geo_array">
        <item>Moscow</item>
        <item>Saratov</item>
        <item>Penza</item>
    </string-array>
</resources>