<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/iv_circle_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_circle_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ellipse_category"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_category_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_category_icon"
        app:layout_constraintBottom_toBottomOf="@+id/iv_circle_category"
        app:layout_constraintEnd_toEndOf="@+id/iv_circle_category"
        app:layout_constraintStart_toStartOf="@+id/iv_circle_category"
        app:layout_constraintTop_toTopOf="@+id/iv_circle_category"
        app:srcCompat="@drawable/comp_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_NameOfCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/nameofcategory"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_circle_category"
        app:layout_constraintTop_toBottomOf="@+id/iv_circle_category" />
</androidx.constraintlayout.widget.ConstraintLayout>